--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,7 +42,7 @@
             android:background="@color/mainOrange"
             android:layout_weight="1">
 
-            <TextView
+            TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -59,7 +59,7 @@
             android:background="@color/mainOrange"
             android:layout_weight="1">
 
-            <TextView
+            TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -99,7 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="FitKeeper"
+        android:text="@string/app_name"
         android:id="@+id/textView"
         android:layout_below="@+id/view"
         android:layout_centerHorizontal="true"
@@ -109,7 +109,7 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="user info"
+        android:text="@string/user_info_button"
         android:id="@+id/button2"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
@@ -118,7 +118,7 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="workout records"
+        android:text="@string/workout_button"
         android:id="@+id/button3"
         android:layout_below="@+id/button2"
         android:layout_alignStart="@+id/button2"
@@ -127,7 +127,7 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="subscription"
+        android:text="@string/subscription_button"
         android:id="@+id/button4"
         android:layout_below="@+id/button3"
         android:layout_alignStart="@+id/button3"
