--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -110,7 +110,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/user_info_button"
-        android:id="@+id/button2"
+        android:id="@+id/btnHome"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp" />
@@ -119,18 +119,18 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/workout_button"
-        android:id="@+id/button3"
-        android:layout_below="@+id/button2"
-        android:layout_alignStart="@+id/button2"
+        android:id="@+id/btnWorkout"
+        android:layout_below="@+id/btnHome"
+        android:layout_alignStart="@+id/btnHome"
         android:layout_marginTop="34dp" />
 
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/subscription_button"
-        android:id="@+id/button4"
-        android:layout_below="@+id/button3"
-        android:layout_alignStart="@+id/button3"
+        android:id="@+id/btnSubscription"
+        android:layout_below="@+id/btnWorkout"
+        android:layout_alignStart="@+id/btnWorkout"
         android:layout_marginTop="33dp" />
 
     <ImageButton
