--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,29 +35,36 @@
             android:layout_height="match_parent">
 
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="298dp"
+                android:layout_height="40dp"
                 android:inputType="textEmailAddress"
+                android:hint="E-mail"
+                android:padding="5dp"
                 android:ems="10"
                 android:id="@+id/editText"
                 android:layout_gravity="center_horizontal"
+                android:background="@drawable/border"
                 android:layout_marginTop="150dp"/>
 
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="298dp"
+                android:layout_height="40dp"
                 android:inputType="textPassword"
+                android:hint="Password"
+                android:padding="5dp"
                 android:ems="10"
                 android:id="@+id/editText2"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/border"
+                android:layout_marginTop="10dp"/>
 
             <Button
-                android:layout_width="match_parent"
+                android:layout_width="298dp"
                 android:layout_height="wrap_content"
                 android:text="Log In"
                 android:id="@+id/button"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
             android:background="@color/mainOrange"/>
 
             <ImageButton
@@ -80,7 +87,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_height="50dp"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="37dp"
                 android:backgroundTint="#000000"/>
         </LinearLayout>
     </LinearLayout>
