--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,6 +59,14 @@
                 android:background="@drawable/border"
                 android:layout_marginTop="10dp"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text=""
+                android:id="@+id/errorTxt"
+                android:layout_gravity="center_horizontal" />
+
             <Button
                 android:layout_width="298dp"
                 android:layout_height="wrap_content"
