--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -47,7 +47,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
+        android:text="Name:"
         android:id="@+id/textView2"
         android:layout_below="@+id/spinner"
         android:layout_alignStart="@+id/spinner"
@@ -57,7 +57,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Age"
+        android:text="Age:"
         android:id="@+id/textView3"
         android:layout_below="@+id/textView2"
         android:layout_alignStart="@+id/textView2"
@@ -66,7 +66,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Height"
+        android:text="Height:"
         android:id="@+id/textView4"
         android:layout_below="@+id/textView3"
         android:layout_alignStart="@+id/textView3"
@@ -75,7 +75,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Weight"
+        android:text="Weight:"
         android:id="@+id/textView5"
         android:layout_below="@+id/textView4"
         android:layout_alignStart="@+id/textView4"
@@ -84,7 +84,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="IMC"
+        android:text="IMC:"
         android:id="@+id/textView6"
         android:layout_below="@+id/textView5"
         android:layout_alignStart="@+id/textView5"
@@ -95,35 +95,40 @@
         android:layout_height="wrap_content"
         android:id="@+id/editText3"
         android:layout_alignBaseline="@+id/textView2"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/border"/>
 
     <EditText
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:id="@+id/editText4"
         android:layout_alignBaseline="@+id/textView3"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/border"/>
 
     <EditText
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:id="@+id/editText5"
         android:layout_alignBaseline="@+id/textView4"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/border"/>
 
     <EditText
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:id="@+id/editText6"
         android:layout_alignBaseline="@+id/textView5"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/border"/>
 
     <EditText
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:id="@+id/editText7"
         android:layout_alignBaseline="@+id/textView6"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/border"/>
 
     <ImageButton
         android:layout_width="70dp"
