--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -3,10 +3,216 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.daniel.fitkeeper.WorkoutActivity">
+    android:paddingBottom="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
+    android:background="@color/backgroundOrange"
+    tools:context="com.example.daniel.fitkeeper.HomeActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:background="#3b5998"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_height="70dp"
+        android:backgroundTint="#000000"
+        android:id="@+id/view">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Workout"
+            android:id="@+id/textView1"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="40sp"/>
+    </android.support.v7.widget.Toolbar>
+
+    <Spinner
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:id="@+id/spinner"
+        android:layout_below="@+id/view"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="38dp"
+        android:layout_marginLeft="30dp"/>
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="240dp"
+        android:background="@color/white"
+        android:id="@+id/table">
+
+        <TableRow
+            android:background="@color/lightGray">
+
+            <TextView
+                android:text="Exercise"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+            <TextView
+                android:text="Set"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="Reps"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+            <TextView
+                android:text="Weight"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:text="Chest"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="3"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="8"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="20kg"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:text="Biceps"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="3"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="8"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="20kg"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:text="Triceps"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="3"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="8"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="20kg"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:text="Back"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="3"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="8"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+
+            <TextView
+                android:text="20kg"
+                android:padding="3dip"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="@drawable/border2"/>
+        </TableRow>
+    </TableLayout>
+
+    <ImageButton
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageButton3"
+        android:src="@drawable/ic_back_button"
+        android:layout_marginBottom="30dp"
+        android:background="@color/mainOrange"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignLeft="@id/table"/>
+
 
 </RelativeLayout>
