--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -137,8 +137,7 @@
         android:src="@drawable/ic_back_button"
         android:layout_marginBottom="30dp"
         android:background="@color/mainOrange"
-        android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/editText7" />
+        android:layout_alignParentBottom="true" />
 
 
 </RelativeLayout>
