--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -80,7 +80,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_height="70dp"
-        android:backgroundTint="#000000"
+        android:backgroundTint="@color/black"
         android:id="@+id/view">
 
         <TextView
@@ -88,8 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Home"
-            android:id="@+id/textView1"
+            android:text="@string/home_name"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:textSize="40sp"/>
@@ -100,7 +99,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/app_name"
-        android:id="@+id/textView"
+        android:id="@+id/AppName"
         android:layout_below="@+id/view"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
@@ -111,7 +110,7 @@
         android:layout_height="wrap_content"
         android:text="@string/user_info_button"
         android:id="@+id/btnHome"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/AppName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp" />
 
@@ -136,7 +135,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
+        android:id="@+id/settingsButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="20dp"
@@ -144,7 +143,7 @@
         android:src="@drawable/ic_settings_icon"
         android:background="@color/mainOrange"/>
 
-    <ImageButton
+    <!--<ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton2"
@@ -153,6 +152,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginLeft="20dp"
         android:background="@color/mainOrange"/>
+
+        COLOCAR BOTAO DE DESLOGAR DENTRO DAS CONFIGURAÇÕES!-->
 
 
 </RelativeLayout>
