--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,8 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="FitKeeper"
-        android:id="@+id/textView1"
+        android:text="@string/app_name"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:fontFamily="sans-serif-medium"
@@ -70,7 +69,7 @@
             <Button
                 android:layout_width="298dp"
                 android:layout_height="wrap_content"
-                android:text="Log In"
+                android:text="@string/login_button"
                 android:id="@+id/loginBtn"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
@@ -97,7 +96,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_height="50dp"
                 android:layout_marginTop="37dp"
-                android:backgroundTint="#000000"/>
+                android:backgroundTint="@color/black"/>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
