--- a/app/src/main/res/layout-land/activity_workout.xml
+++ b/app/src/main/res/layout-land/activity_workout.xml
@@ -58,6 +58,15 @@
         android:layout_marginTop="38dp"
         android:layout_marginLeft="30dp"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text=""
+                android:id="@+id/currentDayTxt"
+                android:layout_below="@+id/spinnerWeek"
+                android:layout_toEndOf="@+id/backBtn" />
+
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
