--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -109,7 +109,8 @@
         android:id="@+id/nameEdtTxt"
         android:layout_alignBaseline="@+id/nameTxt"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:padding="5dp"/>
 
     <EditText
         android:layout_width="180dp"
@@ -117,7 +118,8 @@
         android:id="@+id/ageEdtTxt"
         android:layout_alignBaseline="@+id/ageTxt"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:padding="5dp"/>
 
     <EditText
         android:layout_width="180dp"
@@ -125,7 +127,8 @@
         android:id="@+id/heightEdtTxt"
         android:layout_alignBaseline="@+id/heightTxt"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:padding="5dp"/>
 
     <EditText
         android:layout_width="180dp"
@@ -133,7 +136,8 @@
         android:id="@+id/weightEdtTxt"
         android:layout_alignBaseline="@+id/weightTxt"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:padding="5dp"/>
 
     <EditText
         android:layout_width="180dp"
@@ -141,7 +145,8 @@
         android:id="@+id/imcEdtTxt"
         android:layout_alignBaseline="@+id/imcTxt"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:padding="5dp"/>
 
     <ImageButton
         android:layout_width="70dp"
