--- a/app/src/main/res/layout-large-land/activity_subscription.xml
+++ b/app/src/main/res/layout-large-land/activity_subscription.xml
@@ -82,8 +82,9 @@
         android:layout_height="wrap_content"
         android:text="@string/membership_renew_button_name"
         android:id="@+id/renewBtn"
-        android:layout_above="@+id/backBtn"
-        android:layout_alignEnd="@+id/membershipLstDayEdtTxt" />
+        android:layout_below="@+id/membershipLstDayEdtTxt"
+        android:layout_alignStart="@+id/membershipLstDayEdtTxt"
+        android:layout_marginTop="43dp" />
 
     <ImageButton
         android:layout_width="70dp"
