--- a/app/src/main/res/layout/activity_subscription.xml
+++ b/app/src/main/res/layout/activity_subscription.xml
@@ -83,7 +83,8 @@
         android:text="@string/membership_renew_button_name"
         android:id="@+id/renewBtn"
         android:layout_above="@+id/backBtn"
-        android:layout_alignEnd="@+id/membershipLstDayEdtTxt" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="46dp" />
 
     <ImageButton
         android:layout_width="70dp"
